# Phototherapy_Timer

./: .gitignore  AGENTS.md  README.md  conversation-with-grok.md  grok-session-export.md  install_kicad_omarchy
KiCad/BreakoutBoard/: BreakoutBoard.kicad_pro  BreakoutBoard.kicad_sch  fp-lib-table
arduino_test_firmware/: .gitignore  README.md  mise.toml
arduino_test_firmware/blink/: blink.ino
arduino_test_firmware/hello_serial/: hello_serial.ino
arduino_test_firmware/led_hunt/: led_hunt.ino
arduino_test_firmware/led_off/: led_off.ino
arduino_test_firmware/scripts/: setup.sh
docs/: device-discovery.md  esp32-board.md  front-panel.md  keypad-i2c.md  lcd1602-i2c.md  peripherals.md  seven-segment-display.md  toolchain.md  wifi-config.md  wiring.md
docs/features/: README.md  authentication.feature  device_discovery.feature  devices.feature  exposures.feature  session_timer.feature
docs/mechanical/: component-modules-scan.md  front-panel.scad  top-frame-assembly-2d.scad  top-frame-isolated-vs-assembled.md  top-frame-parts-scan.md
esp32_firmware/: .gitignore  README.md  mise.toml
esp32_firmware/apps/session_timer/main/: CMakeLists.txt  keypad_i2c.c  keypad_i2c.h  lcd1602_pcf8574.c  lcd1602_pcf8574.h  main.c
esp32_firmware/scripts/: build.sh  export-idf.sh  flash.sh  (+2 more)
scripts/: detect-esp-port.sh  export-known-wifi.sh  fw  gen-front-panel-cardboard.py  gen-letter-graph-paper.py  gen-top-frame-assembly-pdf.py  gen-wifi-credentials.sh  nvs-wifi-provision.sh  scan-bed  with-esp-port.sh
secrets/: README.md  wifi.yaml.example
server/: Dockerfile  README.md
(+75 files in other folders)
